# hector_visualization

./: .gitignore  stack.xml
hector_barrel_detection/: CMakeLists.txt  package.xml
hector_barrel_detection/include/hector_barrel_detection/: hector_barrel_detection.h
hector_barrel_detection/launch/: hector_barrel_detection.launch
hector_barrel_detection/src/: hector_barrel_detection.cpp  hector_barrel_detection_node.cpp
hector_barrel_detection_nodelet/cfg/: BarrelDetection.cfg
hector_barrel_detection_nodelet/include/hector_barrel_detection_nodelet/: hector_barrel_detection_nodelet.h
hector_barrel_detection_nodelet/launch/: hector_barrel_detection_nodelet.launch  load_into_openni_nodelet_on_robot.launch
hector_barrel_detection_nodelet/src/: hector_barrel_detection_nodelet.cpp
hector_barrel_geotiff_plugin/: CMakeLists.txt  hector_barrel_geotiff_plugin.xml  package.xml
hector_barrel_geotiff_plugin/src/: hector_barrel_geotiff_plugin.cpp
hector_co2_detection_plugin/: CMakeLists.txt  hector_co2_detection_plugin.xml  package.xml
hector_co2_detection_plugin/lib/: CO2Detection.py  CO2Detection.ui
hector_co2_processing/: CMakeLists.txt  package.xml
hector_co2_processing/launch/: co2process.launch
hector_co2_processing/src/: hector_co2_processing_node.cpp
hector_rqt_joint_control/: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
hector_rqt_joint_control/config/: displayed_groups.yaml
hector_rqt_joint_control/launch/: joint_control.launch
hector_rqt_joint_control/scripts/: joint_control  joint_control_qt
hector_rqt_joint_control/src/hector_rqt_joint_control/: joint_control.py  joint_control_qt.py  joint_control_widget.py
hector_rqt_plugins/: CMakeLists.txt  package.xml  plugin.xml
hector_rqt_plugins/include/rqt_flipper_control/: flipper_control.h
hector_rqt_plugins/include/rqt_image_cropping/: image_cropper.h
hector_rqt_plugins/include/rqt_image_enhancer/: image_enhancer.h  ratio_layouted_frame.h
hector_rqt_plugins/include/rqt_map_merger/: map_merger.h  ratio_layouted_frame.h
hector_rqt_plugins/src/rqt_flipper_control/: flipper_control.cpp
hector_rqt_plugins/src/rqt_image_cropping/: image_cropper.cpp  image_cropper.ui
hector_rqt_plugins/src/rqt_image_enhancer/: image_enhancer.cpp  image_enhancer.ui  ratio_layouted_frame.cpp
hector_rqt_plugins/src/rqt_map_merger/: map_merger.cpp  map_merger.ui  ratio_layouted_frame.cpp
hector_rviz_plugins/: CMakeLists.txt  manifest.xml  package.xml  plugin_description.xml
hector_rviz_plugins/src/: vector3_display.cpp  vector3_display.h  vector3_visual.cpp  vector3_visual.h
hector_stair_detection/: CMakeLists.txt  package.xml
hector_stair_detection/config/: argo.yaml  hector.yaml
hector_stair_detection/include/hector_stair_detection/: hector_stair_detection.h
hector_stair_detection/src/: hector_stair_detection.cpp
hector_stair_detection_msgs/msg/: BorderAndOrientationOfStairs.msg
hector_veil_geotiff_plugin/: CMakeLists.txt  hector_veil_geotiff_plugin.xml  package.xml
hector_veil_geotiff_plugin/src/: hector_veil_geotiff_plugin.cpp
rqt_video_playback/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_video_playback/include/rqt_video_playback/: video_playback.h
rqt_video_playback/scripts/: rqt_video_playback
rqt_video_playback/src/rqt_video_playback/: video_playback.cpp  video_playback.ui
tracker_base_ui/: CMakeLists.txt  package.xml  tracker_base_ui.xml
tracker_base_ui/lib/: TrackerBaseUi.py  TrackerBaseUi.ui
