<package>
  <name>hector_rqt_plugins</name>
  <version>0.2.16</version>
  <description>rqt_image_enhancer provides a GUI plugin for displaying images using image_transport.</description>
  <maintainer email="graber@fsr.tu-darmstadt.de">Thorsten Graber</maintainer>

  <license>BSD</license>

  <author>Dirk Thomas</author>
  <author>Thorsten Graber	</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
